--- a/opener/Resources/Base.lproj/MainMenu.xib
+++ b/opener/Resources/Base.lproj/MainMenu.xib
@@ -14,6 +14,8 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="opener" customModuleProvider="target">
             <connections>
+                <outlet property="capture_switch" destination="GC9-ae-6Zb" id="8Hq-ZR-9Lc"/>
+                <outlet property="pf_text_view" destination="QgY-4r-5BK" id="4EM-OA-09z"/>
                 <outlet property="utun_label" destination="Scg-QM-p2V" id="RCq-hg-j3v"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
@@ -690,25 +692,61 @@
                 <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Scg-QM-p2V">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Scg-QM-p2V">
                         <rect key="frame" x="18" y="324" width="49" height="16"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="utunN: " id="ZXf-HK-6JM">
                             <font key="font" usesAppearanceFont="YES"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <switch horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" baseWritingDirection="leftToRight" alignment="left" translatesAutoresizingMaskIntoConstraints="NO" id="GC9-ae-6Zb">
+                    <switch horizontalHuggingPriority="750" verticalHuggingPriority="750" baseWritingDirection="leftToRight" alignment="left" translatesAutoresizingMaskIntoConstraints="NO" id="GC9-ae-6Zb">
                         <rect key="frame" x="71" y="319" width="42" height="25"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <connections>
                             <action selector="toggleUtunWithSender:" target="Voe-Tx-rLC" id="AnV-UR-S7O"/>
+                            <binding destination="T0v-63-3eS" name="value" keyPath="values.capturing" id="za3-pF-3kn"/>
                         </connections>
                     </switch>
+                    <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Wl-d1-wLR">
+                        <rect key="frame" x="20" y="20" width="440" height="293"/>
+                        <clipView key="contentView" drawsBackground="NO" id="qWK-m1-xGo">
+                            <rect key="frame" x="0.0" y="0.0" width="440" height="293"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="QgY-4r-5BK">
+                                    <rect key="frame" x="0.0" y="0.0" width="440" height="293"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <size key="minSize" width="440" height="293"/>
+                                    <size key="maxSize" width="440" height="10000000"/>
+                                    <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                </textView>
+                            </subviews>
+                        </clipView>
+                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="Xol-3j-XyO">
+                            <rect key="frame" x="-100" y="-100" width="240" height="16"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="x9H-7p-AMH">
+                            <rect key="frame" x="424" y="0.0" width="16" height="293"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="GC9-ae-6Zb" firstAttribute="leading" secondItem="Scg-QM-p2V" secondAttribute="trailing" constant="8" symbolic="YES" id="3t3-wn-OOk"/>
+                    <constraint firstItem="3Wl-d1-wLR" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="L0S-PS-H4p"/>
+                    <constraint firstItem="Scg-QM-p2V" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" symbolic="YES" id="Wn1-P1-APR"/>
+                    <constraint firstItem="GC9-ae-6Zb" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="17" id="Xe5-eS-0I7"/>
+                    <constraint firstAttribute="trailing" secondItem="3Wl-d1-wLR" secondAttribute="trailing" constant="20" symbolic="YES" id="XwA-as-Hzc"/>
+                    <constraint firstAttribute="bottom" secondItem="3Wl-d1-wLR" secondAttribute="bottom" constant="20" symbolic="YES" id="bJu-uW-vJX"/>
+                    <constraint firstItem="Scg-QM-p2V" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="vBc-rX-5rn"/>
+                    <constraint firstItem="3Wl-d1-wLR" firstAttribute="top" secondItem="Scg-QM-p2V" secondAttribute="bottom" constant="11" id="xxo-wp-YXL"/>
+                </constraints>
             </view>
-            <point key="canvasLocation" x="200" y="400"/>
+            <point key="canvasLocation" x="23" y="440"/>
         </window>
+        <userDefaultsController representsSharedInstance="YES" id="T0v-63-3eS"/>
     </objects>
 </document>
